--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,24 @@
 APP_URL=http://localhost
 HOME=/var/www/html
 ENVIRONMENT=DEV
+FLASK_APP=app.py
+
+DEBUG=TRUE
 
 APP_SECRET_KEY=supersecretkeygoeshere
 APP_ENDPOINT_PATH=/
 APP_PORT=5000
+
+POSTGRES_HOST=postgres
+POSTGRES_DB=data
+POSTGRES_USER=data
+POSTGRES_PASSWORD=data
+POSTGRES_PORT=5432
+
+
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+
+SESSION_COOKIE_SECURE=True
+SESSION_COOKIE_NAME='sessioncookienamegoeshere'
+
+CSRF_TIME_LIMIT=None
